--- a/Car.uvguix.uvprojx
+++ b/Car.uvguix.uvprojx
@@ -461,6 +461,11 @@
               <FileType>5</FileType>
               <FilePath>.\Camera_Driver.h</FilePath>
             </File>
+            <File>
+              <FileName>main.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\main.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
